Changing connection states to enums and getting rid of the different lists for the connections.